fix: feedbackmessages section margin and gap

--- a/style.css
+++ b/style.css
@@ -144,8 +144,9 @@ textarea{
     display: flex;
     flex-direction: column;
     margin-left: 3%;
+    margin-top: 32px;
     margin-bottom: 64px;
-    gap: 32px;
+    gap: 20px;
 }
 
 .FeedbackMessages div{
